[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Fonts/Jersey_20/Jersey20-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/imeges/tile_0063.png" type="Texture" id=2]
[ext_resource path="res://scriptcs/main_menu/main_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/imeges/tile_0098.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/Click.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 171
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=2]
size = 119
extra_spacing_top = -2
extra_spacing_bottom = 2
font_data = ExtResource( 1 )

[node name="main_menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -356.0
margin_right = 259.0
margin_bottom = 357.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.329412 )
margin_left = -34.0
margin_top = 56.5
margin_right = 508.0
margin_bottom = 803.5
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )

[node name="Hamood" type="Label" parent="."]
margin_left = 10.0
margin_top = 166.0
margin_right = 451.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 1 )
text = "Imrane"

[node name="Playe" type="Button" parent="."]
margin_left = 30.0
margin_top = 423.0
margin_right = 460.0
margin_bottom = 549.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "PLaye"
icon = ExtResource( 4 )
expand_icon = true

[node name="Quit" type="Button" parent="."]
margin_left = 30.0
margin_top = 571.0
margin_right = 460.0
margin_bottom = 697.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
icon = ExtResource( 2 )
expand_icon = true

[node name="click_sfx1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="Playe" to="." method="_on_Playe_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
